<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <include layout="@layout/xj_head_common" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#d3ffaf"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_health_remind_select1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jhtx"
                    android:textColor="#2f6800"
                    android:textSize="18.0sp" />

                <ToggleButton
                    android:id="@+id/tbcallalarm"
                    android:layout_width="60dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/xj_info_toggle"
                    android:checked="true"
                    android:minHeight="0.0dip"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtcallcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                  
                    android:layout_weight="0.1"
                    android:maxLines="2"
                    android:text="@string/wtx"
                    android:textColor="#878787"
                    android:textSize="14.0sp" />

                <ImageButton
                    android:id="@+id/btnaddcallalarm"
                    android:layout_width="20.0dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/add_green" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#d3ffaf"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_health_remind_select" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/jxtx"
                    android:textColor="#2f6800"
                    android:textSize="18.0sp" />

                <ToggleButton
                    android:id="@+id/tbcheckalarm"
                    android:layout_width="60dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/xj_info_toggle"
                    android:checked="false"
                    android:minHeight="0.0dip"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtcallcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                    android:layout_weight="0.1"
                    android:maxLines="2"
                    android:text="@string/wtx"
                    android:textColor="#878787"
                    android:textSize="14.0sp" />

                <ImageButton
                    android:id="@+id/btnaddcheckalarm"
                    android:layout_width="20.0dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/add_green" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#d3ffaf"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_health_remind_select2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fytx"
                    android:textColor="#2f6800"
                    android:textSize="18.0sp" />

                <ToggleButton
                    android:id="@+id/tbmedicealarm"
                    android:layout_width="60dip"
                    android:layout_height="24dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/xj_info_toggle"
                    android:checked="true"
                    android:minHeight="0.0dip"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtcallcontent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                    android:layout_weight="0.1"
                    android:maxLines="2"
                    android:text="@string/wtx"
                    android:textColor="#878787"
                    android:textSize="14.0sp" />

                <ImageButton
                    android:id="@+id/btnaddedicealarm"
                    android:layout_width="20.0dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="13.0dip"
                    android:background="@drawable/add_green" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#2f6800"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/tsts"
            android:textColor="@color/white"
            android:textSize="14.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txthjtipcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.1"
                android:maxLines="3"
                android:text=""
                android:textColor="#2f6800"
                android:textSize="14.0sp" />

            <Button
                android:id="@+id/btnhjdetal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8.0dip"
                android:background="@drawable/msg_btn" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>